# mairon

./: Makefile  README.md  pyproject.toml  reference
mairon-cli/: main.py  utils.py
mairon-cli/modules/: dict_attack.cpp
mairon/modules/: __init__.py  breach_check.py  dict_attack.py  mutation_engine.py  pattern_detector.py  scoring.py
mairon_cli/: __init__.py  main.py
mairon_cli/modules/: __init__.py  dict_attack.py  entropy.py  hash_comparison.py  report_gen.py
reports/: sample
