[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mairon"
version = "0.1.0"
description = "Password Audit and Analysis Tool — CLI-based, Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "colorama>=0.4.6",
    "bcrypt>=4.0.0",
]

[project.scripts]
mairon = "mairon_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mairon*"]
